<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_tx">CAN Ver</string>
    <string name="ac_ac">AC</string>
    <string name="ac_auto">AUTO</string>
    <string name="ac_clear">CLEAR</string>
    <string name="ac_eco">ECO</string>
    <string name="ac_heat">HEAT</string>
    <string name="ac_off">OFF</string>
    <string name="ac_rear">REAR</string>
    <string name="ac_sync">SYNC</string>
    <string name="ac_temp_hi">HI</string>
    <string name="ac_temp_lo">LO</string>
    <string name="ac_temp_lv">lv</string>
    <string name="ac_temp_unit_c">℃</string>
    <string name="ac_temp_unit_f">℉</string>
    <string name="ac_wind_strength">风量强度：</string>
    <string name="app_name">Car Info</string>
    <string name="app_name_carinfo">LCD instrument</string>
    <string name="app_name_new_carinfo">Vehicle Information</string>
    <string name="avm_first_forward_start">首次前进挡启动</string>
    <string name="avm_forward_trigger">前进挡触发</string>
    <string name="avm_intelligent">智能进入</string>
    <string name="avm_left_turn">左转向灯触发</string>
    <string name="avm_reset">恢复默认设置</string>
    <string name="avm_reset_sure">确认恢复默认设置</string>
    <string name="avm_right_turn">右转向灯触发</string>
    <string name="avm_set">AVM设置</string>
    <string name="avm_start_log">AVM开机动画</string>
    <string name="avm_wheel_trigger">方向盘触发</string>
    <string name="bt_can_box">manufacturer:</string>
    <string name="bt_can_cfg">configuration:</string>
    <string name="bt_can_line">cars:</string>
    <string name="bt_can_sure">save</string>
    <string name="bt_can_type">models:</string>
    <string name="bt_can_update">update</string>
    <string name="can_aux">AUX</string>
    <string name="chery_auto_lock">自动落锁</string>
    <string name="chery_car_info">车身状态信息</string>
    <string name="chery_close">关闭</string>
    <string name="chery_dash_bklight">仪表背光</string>
    <string name="chery_daytime_lights">日间行车灯</string>
    <string name="chery_egen_brake_alram">紧急制动报警开关</string>
    <string name="chery_egen_braking_alram">紧急制动报警方式</string>
    <string name="chery_headlamp_delay">前照灯延迟</string>
    <string name="chery_level">级</string>
    <string name="chery_light">灯光</string>
    <string name="chery_light_speaker">灯光和喇叭</string>
    <string name="chery_power_show_flow">开机显示动能流</string>
    <string name="chery_remote_open_trunk">仅遥控开后备箱</string>
    <string name="chery_set_prompt">设置提示</string>
    <string name="chery_speaker">喇叭</string>
    <string name="chery_speed_unit">km/h</string>
    <string name="chery_speeding_alram">超速报警</string>
    <string name="chery_static">静态</string>
    <string name="chery_static_dynamic">静态+动态</string>
    <string name="chery_steer_light">转向辅助照明</string>
    <string name="chery_steering_anim">AVM启动动画</string>
    <string name="chery_steering_avm">转向启动AVM</string>
    <string name="chery_vehicle_line">车辆辅助线</string>
    <string name="choose_name">CarType Switch</string>
    <string name="ci_battery_voltage">Battery voltage</string>
    <string name="ci_cleaning_fluid">Clean fluid</string>
    <string name="ci_driven_distance">mileage</string>
    <string name="ci_engine_speed">Engine speed</string>
    <string name="ci_handbrake">Hand brake</string>
    <string name="ci_left_back_door_open">L-B Open</string>
    <string name="ci_left_front_door_open">L-F Open</string>
    <string name="ci_oil_left">Amount of fuel</string>
    <string name="ci_outdoor_temp">Out temperature</string>
    <string name="ci_rear_door">Tail door</string>
    <string name="ci_rear_door_open">B-B Open</string>
    <string name="ci_right_back_door_open">R-B Open</string>
    <string name="ci_right_front_door_open">R-F Open</string>
    <string name="ci_seat_belts">Seat belts</string>
    <string name="ci_status_low">Too low</string>
    <string name="ci_status_no_close">Not close</string>
    <string name="ci_status_no_line">No department</string>
    <string name="ci_status_no_release">Not to put</string>
    <string name="ci_status_normal">normal</string>
    <string name="ci_traveling_speed">instantaneous velocity</string>
    <string name="close">Close</string>
    <string name="dsp_bal">L-R Balance</string>
    <string name="dsp_bass">Bass</string>
    <string name="dsp_centerpoint">BOSE CenterPoint</string>
    <string name="dsp_driver_seat">"Driver's seat"</string>
    <string name="dsp_fade">F-R Balance</string>
    <string name="dsp_main_vol">Main Vol</string>
    <string name="dsp_mid">Mid</string>
    <string name="dsp_speed_lv">Close</string>
    <string name="dsp_speed_lv1">Lv1</string>
    <string name="dsp_speed_lv2">Lv2</string>
    <string name="dsp_speed_lv3">Lv3</string>
    <string name="dsp_speed_lv4">Lv4</string>
    <string name="dsp_speed_lv5">Lv5</string>
    <string name="dsp_surround_vol">Surround</string>
    <string name="dsp_tre">Tre</string>
    <string name="dsp_vol_by_speed">Speed with vol</string>
    <string name="factory_rgb_set">RGB set</string>
    <string name="lexus_car_media">Car Media</string>
    <string name="lexus_car_vol">VOL:</string>
    <string name="light_reset_bt">Reset</string>
    <string name="media_radio_system">Radio system</string>
    <string name="media_radio_system_america1">America one</string>
    <string name="media_radio_system_america2">America Two</string>
    <string name="media_radio_system_china">Europe/China</string>
    <string name="media_radio_system_middle_east">The Middle East</string>
    <string name="media_radio_system_south_america">South America</string>
    <string name="nissan_cd_status1">Have Disc</string>
    <string name="nissan_cd_status2">No Disc</string>
    <string name="nissan_cd_status3">Eject Disc</string>
    <string name="nissan_dsp_beep">Beep ON/OFF</string>
    <string name="nissan_menu_time">Time Info</string>
    <string name="nissan_rd_auto">AUTO</string>
    <string name="nissan_rd_rds">RDS</string>
    <string name="nissan_rd_scane">SCANE</string>
    <string name="nissan_rd_st">ST</string>
    <string name="nissan_rd_str">radio</string>
    <string name="other_cancel">Cancel</string>
    <string name="other_ok">Confirm</string>
    <string name="radar_text">Parking system</string>
    <string name="radar_warn_text">Please make sure the safe to reverse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="str_acc_front_waring">ACC detection prompt tone</string>
    <string name="str_active_safety">主动安全</string>
    <string name="str_ad_main_info">保养信息</string>
    <string name="str_ad_main_info1">确定重置保养信息吗?</string>
    <string name="str_ad_main_info2">重置</string>
    <string name="str_ad_reset_info">恢复出厂设置</string>
    <string name="str_ad_reset_info1">确定恢复出厂设置吗?</string>
    <string name="str_ad_reset_info2">确定</string>
    <string name="str_ad_tpms_cancel">cancel</string>
    <string name="str_ad_tpms_msg">Calibration of tire pressure monitoring system</string>
    <string name="str_ad_tpms_ok">calibration</string>
    <string name="str_ad_tpms_title">Tire pressure monitoring</string>
    <string name="str_adjust_alarm_volume">Adjust alarm volume</string>
    <string name="str_adjust_out_temp">Adjust outSide temperature</string>
    <string name="str_air_ac">AC</string>
    <string name="str_air_ac_max">AC/MAX</string>
    <string name="str_air_ac_mode">A/C</string>
    <string name="str_dz7_menu_airset">触摸空调</string>
    <string name="str_dz7_menu_car_state">Car State</string>
    <string name="str_dz7_menu_carset">Car Set</string>
    <string name="str_dz7_menu_convs">Driving Data</string>
    <string name="str_dz7_menu_notify_num">no tips</string>
    <string name="str_dz7_menu_services">Services</string>
    <string name="str_dz7_menu_startstop">Conv.</string>
    <string name="str_ec180_TotalMileage">已行驶里程</string>
    <string name="str_ec180_carstate">汽车状态</string>
    <string name="str_ec180_curenergyuse">本次能耗</string>
    <string name="str_ec180_electric">电量</string>
    <string name="str_ec180_name">环保等级称号</string>
    <string name="str_ec180_planting">相当于种植树木</string>
    <string name="str_ford_cop_seat_back">Sub frame seat back adjustment</string>
    <string name="str_ford_cop_seat_hip">Sub-frame seat hip adjustment</string>
    <string name="str_ford_cop_seat_hip_both">Sub-frame seat on both sides of the hip adjustment</string>
    <string name="str_ford_cop_seat_hip_msg">Sub-frame seat buttocks massage</string>
    <string name="str_ford_cop_seat_waist">Sub-frame seat waist adjustment</string>
    <string name="str_ford_cop_seat_waist_both">Sub-frame seat on both sides of the waist adjustment</string>
    <string name="str_ford_cop_seat_waist_msg">Sub-frame seat waist massage</string>
    <string name="str_ford_main_seat_back">Main frame seat back adjustment</string>
    <string name="str_ford_main_seat_hip">Main frame seat hip adjustment</string>
    <string name="str_ford_main_seat_hip_both">Main frame seat on both sides of the hip adjustment</string>
    <string name="str_ford_main_seat_hip_msg">Main frame seat buttocks massage</string>
    <string name="str_ford_main_seat_waist">Main frame seat waist adjustment</string>
    <string name="str_ford_main_seat_waist_both">Main frame seat on both sides of the waist adjustment</string>
    <string name="str_ford_main_seat_waist_msg">Main frame seat waist massage</string>
    <string name="str_gm_air_set">Air conditioning aystem settings</string>
    <string name="str_gm_car_set">In the control settings</string>
    <string name="str_gm_on_star">OnStar</string>
    <string name="str_souast_fuel">百公里油耗:</string>
    <string name="str_souast_langset">语言:</string>
    <string name="str_souast_oil">剩余油量:</string>
    <string name="str_souast_tpms">胎压</string>
    <string name="str_souast_tripa">可行驶里程:</string>
    <string name="str_souast_tript">行驶里程:</string>
    <string name="str_tx_jeep_menu_airset">Air Set</string>
    <string name="str_tx_jeep_menu_carset">Car Set</string>
    <string name="str_tx_jeep_menu_cdinfo">CD Info</string>
    <string name="str_tx_jeep_menu_compass">Compass</string>
    <string name="str_tx_jeep_menu_dspinfo">Dsp Info</string>
</resources>