<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@drawable/can_bg" android:padding="@dimen/fragment_padding" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:can="http://schemas.android.com/apk/res/com.can.activity">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <com.can.ui.draw.HeaderLayout android:id="@id/main_back_set" android:layout_width="wrap_content" android:layout_height="wrap_content" can:item_style="1" can:item_subTitle="@string/str_ford_main_seat_back" />
        <com.can.ui.draw.HeaderLayout android:id="@id/main_waist_set" android:layout_width="wrap_content" android:layout_height="wrap_content" can:item_style="1" can:item_subTitle="@string/str_ford_main_seat_waist" />
        <com.can.ui.draw.HeaderLayout android:id="@id/main_hip_set" android:layout_width="wrap_content" android:layout_height="wrap_content" can:item_style="1" can:item_subTitle="@string/str_ford_main_seat_hip" />
        <com.can.ui.draw.HeaderLayout android:id="@id/main_waist_both_set" android:layout_width="wrap_content" android:layout_height="wrap_content" can:item_style="1" can:item_subTitle="@string/str_ford_main_seat_waist_both" />
        <com.can.ui.draw.HeaderLayout android:id="@id/main_hip_both_set" android:layout_width="wrap_content" android:layout_height="wrap_content" can:item_style="1" can:item_subTitle="@string/str_ford_main_seat_hip_both" />
        <com.can.ui.draw.HeaderLayout android:id="@id/main_waist_msg" android:layout_width="wrap_content" android:layout_height="wrap_content" can:item_style="1" can:item_subTitle="@string/str_ford_main_seat_waist_msg" />
        <com.can.ui.draw.HeaderLayout android:id="@id/main_hip_msg" android:layout_width="wrap_content" android:layout_height="wrap_content" can:item_style="1" can:item_subTitle="@string/str_ford_main_seat_hip_msg" />
        <com.can.ui.draw.HeaderLayout android:id="@id/cop_back_set" android:layout_width="wrap_content" android:layout_height="wrap_content" can:item_style="1" can:item_subTitle="@string/str_ford_cop_seat_back" />
        <com.can.ui.draw.HeaderLayout android:id="@id/cop_waist_set" android:layout_width="wrap_content" android:layout_height="wrap_content" can:item_style="1" can:item_subTitle="@string/str_ford_cop_seat_waist" />
        <com.can.ui.draw.HeaderLayout android:id="@id/cop_hip_set" android:layout_width="wrap_content" android:layout_height="wrap_content" can:item_style="1" can:item_subTitle="@string/str_ford_cop_seat_hip" />
        <com.can.ui.draw.HeaderLayout android:id="@id/cop_waist_both_set" android:layout_width="wrap_content" android:layout_height="wrap_content" can:item_style="1" can:item_subTitle="@string/str_ford_cop_seat_waist_both" />
        <com.can.ui.draw.HeaderLayout android:id="@id/cop_hip_both_set" android:layout_width="wrap_content" android:layout_height="wrap_content" can:item_style="1" can:item_subTitle="@string/str_ford_cop_seat_hip_both" />
        <com.can.ui.draw.HeaderLayout android:id="@id/cop_waist_msg" android:layout_width="wrap_content" android:layout_height="wrap_content" can:item_style="1" can:item_subTitle="@string/str_ford_cop_seat_waist_msg" />
        <com.can.ui.draw.HeaderLayout android:id="@id/cop_hip_msg" android:layout_width="wrap_content" android:layout_height="wrap_content" can:item_style="1" can:item_subTitle="@string/str_ford_cop_seat_hip_msg" />
    </LinearLayout>
</ScrollView>
