<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/ac_carinfo_bg" android:paddingTop="50.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:windlevel="http://schemas.android.com/apk/res/com.can.activity">
    <TextView android:textSize="@dimen/tx_curfuel_size" android:textColor="@android:color/white" android:id="@id/tx_TotalMileage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dp" android:text="@string/str_ec180_TotalMileage" />
    <TextView android:textSize="@dimen/tx_curfuel_size" android:textColor="@android:color/white" android:id="@id/tx_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dp" android:text="@string/str_ec180_name" />
    <TextView android:textSize="@dimen/tx_curfuel_size" android:textColor="@android:color/white" android:id="@id/tx_plant" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dp" android:text="@string/str_ec180_planting" />
    <TextView android:textSize="@dimen/tx_curfuel_size" android:textColor="@android:color/white" android:id="@id/tx_carstate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dp" android:text="@string/str_ec180_carstate" />
    <TextView android:textSize="@dimen/tx_curfuel_size" android:textColor="@android:color/white" android:id="@id/tx_curenergyuse" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dp" android:text="@string/str_ec180_curenergyuse" />
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/tx_curfuel_size" android:textColor="@android:color/white" android:id="@id/tx_electric" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dp" android:text="@string/str_ec180_electric" />
        <com.can.ui.draw.Windlv android:id="@id/iv_electric_lv" android:layout_width="@dimen/tx_hisfuel_progress_width" android:layout_height="20.0dp" android:layout_marginLeft="@dimen/tx_temp_padding_right" windlevel:BmpNormal="@drawable/ac_wind_normal" windlevel:BmpSelect="@drawable/ac_wind_sel" windlevel:MaxLevel="10" windlevel:Spacing="5" />
    </LinearLayout>
</LinearLayout>
