<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/fuel_bg" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <LinearLayout android:layout_gravity="bottom" android:id="@id/souast_ll_switch" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
            <RelativeLayout android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="@dimen/tx_default_size" android:gravity="center" android:id="@id/souast_langset" android:background="@drawable/choose_dialog_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_souast_langset" android:layout_centerInParent="true" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="@dimen/tx_default_size" android:gravity="center" android:id="@id/souast_tpms" android:background="@drawable/choose_dialog_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_souast_tpms" android:layout_centerInParent="true" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/psa_ll_page0" android:layout_width="match_parent" android:layout_height="@dimen/dsp_psa_trip_heigth">
            <RelativeLayout android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_weight="1.0">
                <TextView android:layout_marginLeft="@dimen/dps_psa_trip_left" android:text="@string/str_souast_fuel" style="@style/psa_trip_tv_style" />
                <TextView android:id="@id/souast_tv_fuel_consumption" android:layout_marginLeft="@dimen/dps_psa_trip_value_left" style="@style/psa_trip_tv_style" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_weight="1.0">
                <TextView android:layout_marginLeft="@dimen/dps_psa_trip_left" android:text="@string/str_souast_tript" style="@style/psa_trip_tv_style" />
                <TextView android:id="@id/souast_tv_recharge_mileage" android:layout_marginLeft="@dimen/dps_psa_trip_value_left" style="@style/psa_trip_tv_style" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_weight="1.0">
                <TextView android:layout_marginLeft="@dimen/dps_psa_trip_left" android:text="@string/str_souast_tripa" style="@style/psa_trip_tv_style" />
                <TextView android:id="@id/souast_tv_destination_miles" android:layout_marginLeft="@dimen/dps_psa_trip_value_left" style="@style/psa_trip_tv_style" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_weight="1.0">
                <TextView android:layout_marginLeft="@dimen/dps_psa_trip_left" android:text="@string/str_souast_oil" style="@style/psa_trip_tv_style" />
                <TextView android:id="@id/souast_tv_start_stop_timing" android:layout_marginLeft="@dimen/dps_psa_trip_value_left" style="@style/psa_trip_tv_style" />
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>
